# Automated-Job-Platform

./: README.md  package-lock.json  package.json
Backend/job-app/: agent1.py  agent2.py  agent3.py  agent4.py  database.py  main.py  model.py  pyproject.toml  schema.py
src/: App.css  App.jsx  main.jsx
src/components/: AdminPanel.jsx  Applying.jsx  Chatbot.jsx  Createjob.jsx  Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  JobListing.jsx  YourPost.jsx  chatbot.css
