[project]
name = "job-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai-agents>=0.0.17",
    "pdfplumber>=0.11.7",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.41",
]
